--- a/src/App.css
+++ b/src/App.css
@@ -120,6 +120,7 @@ align-items: center;
   align-items: center;
   justify-content: center;
   font-size: 20px;
+  cursor: pointer;
 
 }
 .defenitions{
