--- a/src/style/App.css
+++ b/src/style/App.css
@@ -17,7 +17,7 @@ body {
   font-family: var(--main-font), sans-serif;
   /*font-family: var(--second-font), sans-serif;*/
   padding: 20px;
-  width: 500px !important;
+  /*width: 500px !important;*/
   margin: 0 auto !important;
   color: #141645;
 }
@@ -59,7 +59,7 @@ input {outline: 0 !important;}
   height: 60px;
   border: 2px solid #E3E4E8;
   border-radius: var(---border-radius);
-  padding: 10px 30px 10px 60px;
+  padding: 10px;
   width: 100%;
 }
 
@@ -68,10 +68,7 @@ input {outline: 0 !important;}
   border: 1px solid var(--main-color);
 }
 
-.header_search svg{
-  position: absolute;
-  top: 30%;
-  left: 10px;
+.header_search .ant-input-prefix{
   opacity: 0.2;
   font-size: 30px;
 }
